[package]
name = "rtsp-server"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
log = "0.4"
env_logger = "0.8"
async-std = "1.0"
futures = "0.3.10"
pin-utils = "0.1"
glib = "0.10"
gst = { version = "0.16", package = "gstreamer", features = ["v1_10"] }
gst-app = { version = "0.16", package = "gstreamer-app" }
#rtsp-types = "0.0.1"
rtsp-types = { git = "https://github.com/sdroege/rtsp-types.git", branch="main" }
sdp-types = "0.1.1"
url = "2"
chrono = "0.4"
rand = "0.7"
uuid = { version = "0.8", features = ["v1", "v4"] }
once_cell = "1"
derivative = "2"
either = "1"
